# epub2md

./: README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build.py  epub2md.cmd  epub2md.sh
src/epub2md/: __init__.py
tests/: test_filename_generation.py
