[project]
name = "epub2md"
version = "0.2.2"
description = "Convert EPUB to clean Markdown chapters"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
epub2md = "epub2md:main"

[project.urls]
Repository = "https://github.com/sommio/epub2md"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
